5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1724_2517.log
== TEST (2019-05-14 11:10:39) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0

while(H =< 0):
	H = h - 1/2*g*(t**2)
	t += 1
	print()
-- ERROR:
File "XXXX", line 5
    while(H =< 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:11:13) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0

while(h =< 0):
	H = h - 1/2*g*(t**2)
	t += 1
	print()
-- ERROR:
File "XXXX", line 5
    while(h =< 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:11:44) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0

while(h <= 0):
	H = h - 1/2*g*(t**2)
	t += 1
	print()
-- ERROR:
File "XXXX", line 5
    while(h =< 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:24) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0

while(h <= 0):
	H = h - 1/2*g*(t**2)
	t += 1
	print(H)
	print(t)
-- ERROR:
File "XXXX", line 5
    while(h =< 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:13:21) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0

while(h >= 0):
	H = h - 1/2*g*(t**2)
	t += 1
	print(H)
	print(t)
-- OUTPUT:
36.0
1
31.1
2
16.4
3
-8.100000000000001
4
-42.400000000000006
5
-86.50000000000001
6
-140.4
7
-204.10000000000002
8
-277.6
9
-360.90000000000003
10
-454.00000000000006
11
-556.9000000000001
12
-669.6
13
-792.1
14
-924.4000000000001
15
-1066.5
16
-1218.4
17
-1380.1000000000001
18
-1551.6000000000001
19
-1732.9
20
-1924.0000000000002
21
-2124.9
22
-2335.6000000000004
23
-2556.1000000000004
24
-2786.4
25
-3026.5
26
-3276.4
27
-3536.1000000000004
28
-3805.6000000000004
29
-4084.9000000000005
30
-4374.0
31
-4672.900000000001
32
-4981.6
33
-5300.1
34
-5628.400000000001
35
-5966.5
36
-6314.400000000001
37
-6672.1
38
-7039.6
39
-7416.900000000001
40
-7804.000000000001
41
-8200.900000000001
42
-8607.6
43
-9024.1
44
-9450.400000000001
45
-9886.5
46
-10332.400000000001
47
-10788.1
48
-11253.6
49
-11728.900000000001
50
-12214.0
51
-12708.900000000001
52
-13213.6
53
-13728.1
54
-14252.400000000001
55
-14786.500000000002
56
-15330.400000000001
57
-15884.1
58
-16447.600000000002
59
-17020.9
60
-17604
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:29) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0

while(h <= 0):
	H = h - (1/2)*g*(t**2)
	t += 1
	print(H)
	print(t)
-- OUTPUT:
36.0
1
31.1
2
16.4
3
-8.100000000000001
4
-42.400000000000006
5
-86.50000000000001
6
-140.4
7
-204.10000000000002
8
-277.6
9
-360.90000000000003
10
-454.00000000000006
11
-556.9000000000001
12
-669.6
13
-792.1
14
-924.4000000000001
15
-1066.5
16
-1218.4
17
-1380.1000000000001
18
-1551.6000000000001
19
-1732.9
20
-1924.0000000000002
21
-2124.9
22
-2335.6000000000004
23
-2556.1000000000004
24
-2786.4
25
-3026.5
26
-3276.4
27
-3536.1000000000004
28
-3805.6000000000004
29
-4084.9000000000005
30
-4374.0
31
-4672.900000000001
32
-4981.6
33
-5300.1
34
-5628.400000000001
35
-5966.5
36
-6314.400000000001
37
-6672.1
38
-7039.6
39
-7416.900000000001
40
-7804.000000000001
41
-8200.900000000001
42
-8607.6
43
-9024.1
44
-9450.400000000001
45
-9886.5
46
-10332.400000000001
47
-10788.1
48
-11253.6
49
-11728.900000000001
50
-12214.0
51
-12708.900000000001
52
-13213.6
53
-13728.1
54
-14252.400000000001
55
-14786.500000000002
56
-15330.400000000001
57
-15884.1
58
-16447.600000000002
59
-17020.9
60
-17604
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:57) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0

while(h >= 0):
	H = h - (1/2)*g*(t**2)
	t += 1
	print(H)
	print(t)
-- OUTPUT:
36.0
1
31.1
2
16.4
3
-8.100000000000001
4
-42.400000000000006
5
-86.50000000000001
6
-140.4
7
-204.10000000000002
8
-277.6
9
-360.90000000000003
10
-454.00000000000006
11
-556.9000000000001
12
-669.6
13
-792.1
14
-924.4000000000001
15
-1066.5
16
-1218.4
17
-1380.1000000000001
18
-1551.6000000000001
19
-1732.9
20
-1924.0000000000002
21
-2124.9
22
-2335.6000000000004
23
-2556.1000000000004
24
-2786.4
25
-3026.5
26
-3276.4
27
-3536.1000000000004
28
-3805.6000000000004
29
-4084.9000000000005
30
-4374.0
31
-4672.900000000001
32
-4981.6
33
-5300.1
34
-5628.400000000001
35
-5966.5
36
-6314.400000000001
37
-6672.1
38
-7039.6
39
-7416.900000000001
40
-7804.000000000001
41
-8200.900000000001
42
-8607.6
43
-9024.1
44
-9450.400000000001
45
-9886.5
46
-10332.400000000001
47
-10788.1
48
-11253.6
49
-11728.900000000001
50
-12214.0
51
-12708.900000000001
52
-13213.6
53
-13728.1
54
-14252.400000000001
55
-14786.500000000002
56
-15330.400000000001
57
-15884.1
58
-16447.600000000002
59
-17020.9
60
-17604
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:48) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0

while(h >= 0):
	H = h - (1/2)*g*(t**2)
	t = t + 1
	print(H)
	print(t)
-- OUTPUT:
36.0
1
31.1
2
16.4
3
-8.100000000000001
4
-42.400000000000006
5
-86.50000000000001
6
-140.4
7
-204.10000000000002
8
-277.6
9
-360.90000000000003
10
-454.00000000000006
11
-556.9000000000001
12
-669.6
13
-792.1
14
-924.4000000000001
15
-1066.5
16
-1218.4
17
-1380.1000000000001
18
-1551.6000000000001
19
-1732.9
20
-1924.0000000000002
21
-2124.9
22
-2335.6000000000004
23
-2556.1000000000004
24
-2786.4
25
-3026.5
26
-3276.4
27
-3536.1000000000004
28
-3805.6000000000004
29
-4084.9000000000005
30
-4374.0
31
-4672.900000000001
32
-4981.6
33
-5300.1
34
-5628.400000000001
35
-5966.5
36
-6314.400000000001
37
-6672.1
38
-7039.6
39
-7416.900000000001
40
-7804.000000000001
41
-8200.900000000001
42
-8607.6
43
-9024.1
44
-9450.400000000001
45
-9886.5
46
-10332.400000000001
47
-10788.1
48
-11253.6
49
-11728.900000000001
50
-12214.0
51
-12708.900000000001
52
-13213.6
53
-13728.1
54
-14252.400000000001
55
-14786.500000000002
56
-15330.400000000001
57
-15884.1
58
-16447.600000000002
59
-17020.9
60
-17604
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:22) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0
H = 1
while(H >= 0):
	H = h - (1/2)*g*(t**2)
	t = t + 1
	print(H)
	print(t)
-- OUTPUT:
36.0
1
31.1
2
16.4
3
-8.100000000000001
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:30:06) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0
H = 1
while(H >= 0):
	H = h - (1/2)*g*(t**2)
	t = t + (t-1)
	print(round(H,1))
	print(t)
-- OUTPUT:
36.0
-1
31.1
-3
-8.1
-7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:30:48) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0
H = 1
while(H >= 0):
	H = h - (1/2)*g*(t**2)
	t = t + 1
	print(round(H,1))
	print(t-1)
-- OUTPUT:
36.0
0
31.1
1
16.4
2
-8.1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:35) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0
H = 1
while(H >= 0):
	H = h - (1/2)*g*(t**2)
	t = t + 1
	print(t-1)
	print(round(H,1))
-- OUTPUT:
0
36.0
1
31.1
2
16.4
3
-8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:46) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0
H = 1
while(H > 0):
	H = h - (1/2)*g*(t**2)
	t = t + 1
	print(t-1)
	print(round(H,1))
-- OUTPUT:
0
36.0
1
31.1
2
16.4
3
-8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:46:06) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0
H = h - (1/2)*g*(t**2)
while(H > 0):
	H = h - (1/2)*g*(t**2)
	t = t + 1
	print(t-1)
	print(round(H,1))
-- OUTPUT:
0
36.0
1
31.1
2
16.4
3
-8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:48:58) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0
H = h - (1/2)*g*(t**2)
while(H > 0):
	print(t-1)
	print(round(H,1))
	H = h - (1/2)*g*(t**2)
	t = t + 1
	
-- OUTPUT:
-1
36.0
0
36.0
1
31.1
2
16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:49:36) 
-- CODE:
h = float(input("altura: "))
g = 9.8
t = 0
H = h - (1/2)*g*(t**2)
while(H > 0):
	print(t)
	print(round(H,1))
	H = h - (1/2)*g*(t**2)
	t = t + 1
	
-- OUTPUT:
0
36.0
1
36.0
2
31.1
3
16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
